/**
 *  Copyright The WildFly Authors
 *  SPDX-License-Identifier: Apache-2.0
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.wildfly.extension.grpc.example.helloworld1";
import "message.proto";

package helloworld1;

// The greeting service definition.
service Greeter1 {
  // Sends a greeting
  rpc SayHello (messages.HelloRequest) returns (messages.HelloReply) {}
}

