/**
 *  Copyright The WildFly Authors
 *  SPDX-License-Identifier: Apache-2.0
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.wildfly.extension.grpc.example.helloworld2";
import "message.proto";

package helloworld2;

// The greeting service definition.
service Greeter2 {
  // Sends a greeting
  rpc SayHello (messages.HelloRequest) returns (messages.HelloReply) {}
}

